background color change for transparent text mobile

--- a/style.css
+++ b/style.css
@@ -1071,7 +1071,7 @@ header{
         width: 180px;
         height: 320px;
     }
-    .col-sm-12{
+    .background-transparent{
         background-color: transparent;
     }
     .hero-bloc-text{
