--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,7 @@ body {
     padding: 0;
     background: #FFF;
     overflow-x: hidden;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+
 }
 
 a,
@@ -45,9 +44,7 @@ a:focus {
     clear: both;
     background: 50% 50% no-repeat;
     padding: 0 50px;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
+
     background-size: cover;
     position: relative;
 }
@@ -78,12 +75,7 @@ a:focus {
 .bg-bl-edge,
 .bg-tr-edge,
 .bg-br-edge,
-.bg-repeat {
-    -webkit-background-size: auto !important;
-    -moz-background-size: auto !important;
-    -o-background-size: auto !important;
-    background-size: auto !important;
-}
+
 
 .bg-repeat {
     background: repeat;
@@ -381,7 +373,7 @@ a:focus {
         top: 50%;
         right: 20px;
         transform: translate(0, -50%);
-        -webkit-transform: translateY(-50%);
+
     }
 
     .nav>li .dropdown-menu a,
@@ -571,13 +563,13 @@ a[data-lightbox]:hover::before {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
-    -webkit-transform: translateY(-50%);
+
 }
 
 a[data-lightbox]:hover img {
     opacity: 0.6;
-    -webkit-animation-fill-mode: none;
-    animation-fill-mode: none;
+
+
 }
 
 #lightbox-modal {
@@ -919,13 +911,13 @@ header {
     }
 }
 
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {
+@media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
     .b-parallax {
         background-attachment: scroll;
     }
 }
 
-@media only screen and (min-device-width: 1024px) and (max-device-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5) {
+@media only screen and (min-width: 1024px) and (max-width: 1366px) {
     .b-parallax {
         background-attachment: scroll;
     }
@@ -946,10 +938,7 @@ header {
         position: relative;
     }
 
-    .bloc {
-        padding-left: constant(safe-area-inset-left);
-        padding-right: constant(safe-area-inset-right);
-    }
+
 
     .bloc-group,
     .bloc-group .bloc {
@@ -960,8 +949,7 @@ header {
     .bloc-fill-screen .fill-bloc-top-edge,
     .bloc-fill-screen .fill-bloc-bottom-edge {
         padding: 0 20px;
-        padding-left: constant(safe-area-inset-left);
-        padding-right: constant(safe-area-inset-right);
+
     }
 }
 
@@ -1002,8 +990,7 @@ header {
         width: 100%;
         position: inherit;
         transform: none;
-        -webkit-transform: none;
-        -ms-transform: none;
+
     }
 
     .nav>li {
@@ -1049,7 +1036,7 @@ header {
     .navbar-collapse {
         padding: 0;
         overflow-x: hidden;
-        -webkit-box-shadow: none;
+
         box-shadow: none;
     }
 
